# cycloweb

./: .gitignore  README.md  db.sqlite3  manage.py  requirements.txt
cycloweb_new/: __init__.py  asgi.py  celery.py  settings.py  settings_prod.py  urls.py  wsgi.py
main/: admin.py  apps.py  context_processors.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_remove_robmodel_allowed_users_profile.py  0003_robmodel_graph_config.py  0004_sitesettings.py
main/static/main/css/: styles.css
main/templates/main/: base.html  index.html  model_dashboard.html  partial_conf_view.html  partial_delete_confirm.html  partial_footer.html  partial_generate_div.html  partial_graph_div.html  partial_list_runs.html  partial_log_view.html  partial_login_form.html  partial_logout_confirm.html  partial_navbar.html  partial_task_status.html
models/dutchbike/: readme.md
models/dutchbike/animationR/vrml/: Abdomen.wrl  Fork.wrl  Frame.wrl  Head.wrl  LowerArm.wrl  LowerLeg.wrl  Pedal.wrl  Pelvis.wrl  Saddle.wrl  Thorax.wrl  UpperArm.wrl  UpperLeg.wrl  Wheel.wrl
models/dutchbike/dataR/: DutchBike.mbs
models/dutchbike/dataR/conf1/: DutchBike.conf
models/dutchbike/dataR/conf2/: DutchBike.conf
models/dutchbike/resultsR/: copy_force_anim_file.py  plot_res.py
models/dutchbike/symbolicR/: mbs_dirdyna_DutchBike.c  mbs_dirdyna_DutchBike.h  mbs_extforces_DutchBike.c  mbs_extforces_DutchBike.h  mbs_gensensor_DutchBike.c  mbs_gensensor_DutchBike.h  mbs_invdyna_DutchBike.c  mbs_invdyna_DutchBike.h  mbs_sensor_DutchBike.c  mbs_sensor_DutchBike.h
models/dutchbike/userfctR/: tgc_kine_wheel_plane3D.c  tgc_kine_wheel_plane3D.h  user_Derivative.c  user_DrivenJoints.c  user_ExtForces.c  user_IO.c  user_IO.h  user_JointForces.c  user_Link3DForces.c  user_LinkForces.c  user_all_id.h  user_cons_hJ.c  user_cons_jdqd.c  user_dirdyn.c  user_ground_level.c  user_ground_level.h  user_hard_param.h  user_model.c  user_model.h
models/dutchbike/userfctR/realtime/: user_realtime_plot.c
models/dutchbike/workR/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  exe_DutchBike  install_manifest.txt  mbs_vrml.py  vrml_ground_profile.py
models/dutchbike/workR/install/: Project_symbolic.lib  Project_user.lib  exe_DutchBike
run_data/2/1/newRun/: sim.conf
venv_dev/: pyvenv.cfg
